gke-dev/k8s-manifests/gce-ingress/service-v2-nodeport.yaml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      cloud.google.com/app-protocols: '{"my-port":"HTTP"}'
      cloud.google.com/backend-config: '{"default":"api-demo-v2-backend"}'
      cloud.google.com/neg: '{"ingress":true}'
    name: api-demo-v2-service-nodeport
  spec:
    ports:
    - name: my-port
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: api-demo-service-v2
    sessionAffinity: None
    type: NodePort
