gke-dev/k8s-manifests/gce-ingress/ingress-prod.yaml
apiVersion: v1
kind: List
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: "gce"
      # kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
      # kubernetes.io/ingress.class: gce-internal
    name: gce-ingress-demo
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: api-demo-v3-service
              port:
                name: my-http
          path: /v3/*
          pathType: ImplementationSpecific
